--- a/.gitignore
+++ b/.gitignore
@@ -119,3 +119,6 @@ compile_commands.json
 # VIA(L) files that don't belong in QMK repo
 via*.json
 /keyboards/**/keymaps/vial/*
+/keyboards/era/sirind/tomak79h/keymaps/via
+/keyboards/era/sirind/chickpad/keymaps/via
+/keyboards/era/comm/classicd_coreless/keymaps/via
